--- a/notebooks/plot_attribution.ipynb
+++ b/notebooks/plot_attribution.ipynb
@@ -39,7 +39,7 @@
    ],
    "source": [
     "# Load experiment\n",
-    "from experiments import get_all_gene_experiments\n",
+    "from experiments import get_all_gene_experiments, get_all_large_genes\n",
     "from dataclasses import dataclass\n",
     "\n",
     "@dataclass\n",
