--- a/notebooks/run_pipeline.ipynb
+++ b/notebooks/run_pipeline.ipynb
@@ -11,239 +11,166 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/carlyn.1/dna-trait-analysis/src/gtp/dataloading/data_preprocessors.py:64: SyntaxWarning: invalid escape sequence '\\/'\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(480, 481)\n",
+      "(188, 189)\n",
+      "(188, 189)\n",
+      "(188, 189)\n",
+      "(188, 189)\n",
+      "(188, 189)\n",
+      "(188, 189)\n",
+      "(188, 189)\n",
+      "(188, 189)\n",
+      "(185, 186)\n",
+      "(185, 186)\n",
+      "(185, 186)\n",
+      "(185, 186)\n",
+      "(185, 186)\n",
+      "(185, 186)\n",
+      "(185, 186)\n",
+      "(185, 186)\n"
+     ]
+    }
+   ],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "from gtp.dataloading.data_preprocessors import ButterflyPatternizePreprocessor\n",
     "\n",
-    "preprocessor = ButterflyPatternizePreprocessor(\"/home/carlyn.1/dna-trait-analysis/tmp/phenotypes\")\n",
-    "preprocessor.process(\"/local/scratch/carlyn.1/dna/colors/erato_forewings_PCA/PCA_color_1_loadings.csv\")\n",
-    "preprocessor.save_result(\"color_1/data.npy\")\n"
+    "ROOT_PHENOTYPE_INPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/colors/\")\n",
+    "ROOT_PHENOTYPE_OUTPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/colors/processed\")\n",
+    "\n",
+    "preprocessor = ButterflyPatternizePreprocessor(\n",
+    "    input_dir = ROOT_PHENOTYPE_INPUT_DIR,\n",
+    "    output_dir = ROOT_PHENOTYPE_OUTPUT_DIR\n",
+    ")\n",
+    "\n",
+    "for species in [\"erato\", \"melpomene\"]:\n",
+    "    for wing in [\"forewings\", \"hindwings\"]:\n",
+    "        for color in [\"color_1\", \"color_2\", \"color_3\", \"total\"]:\n",
+    "            suffix_path = f\"{species}_{wing}_PCA/PCA_{color}_loadings.csv\"\n",
+    "            preprocessor.process(pca_csv_path_suffix=suffix_path)\n",
+    "            preprocessor.save_result(f\"{species}_{wing}_{color}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>camid</th>\n",
-       "      <th>PC1</th>\n",
-       "      <th>PC2</th>\n",
-       "      <th>PC3</th>\n",
-       "      <th>PC4</th>\n",
-       "      <th>PC5</th>\n",
-       "      <th>PC6</th>\n",
-       "      <th>PC7</th>\n",
-       "      <th>PC8</th>\n",
-       "      <th>PC9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PC471</th>\n",
-       "      <th>PC472</th>\n",
-       "      <th>PC473</th>\n",
-       "      <th>PC474</th>\n",
-       "      <th>PC475</th>\n",
-       "      <th>PC476</th>\n",
-       "      <th>PC477</th>\n",
-       "      <th>PC478</th>\n",
-       "      <th>PC479</th>\n",
-       "      <th>PC480</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CAM016019</td>\n",
-       "      <td>-49.652735</td>\n",
-       "      <td>26.011912</td>\n",
-       "      <td>-5.648546</td>\n",
-       "      <td>1.761695</td>\n",
-       "      <td>-18.825114</td>\n",
-       "      <td>18.545350</td>\n",
-       "      <td>-4.060135</td>\n",
-       "      <td>7.981897</td>\n",
-       "      <td>-11.630800</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.281694</td>\n",
-       "      <td>-2.517557</td>\n",
-       "      <td>0.471343</td>\n",
-       "      <td>-0.966010</td>\n",
-       "      <td>0.518198</td>\n",
-       "      <td>-0.886081</td>\n",
-       "      <td>-0.478352</td>\n",
-       "      <td>1.019733</td>\n",
-       "      <td>-0.042493</td>\n",
-       "      <td>-2.573245e-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CAM016020</td>\n",
-       "      <td>-16.930555</td>\n",
-       "      <td>16.616847</td>\n",
-       "      <td>2.692241</td>\n",
-       "      <td>12.040084</td>\n",
-       "      <td>-19.924856</td>\n",
-       "      <td>3.240676</td>\n",
-       "      <td>-2.314513</td>\n",
-       "      <td>-16.903935</td>\n",
-       "      <td>25.908572</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.367014</td>\n",
-       "      <td>0.193835</td>\n",
-       "      <td>-0.340640</td>\n",
-       "      <td>-0.459934</td>\n",
-       "      <td>-0.030614</td>\n",
-       "      <td>0.418748</td>\n",
-       "      <td>0.038679</td>\n",
-       "      <td>0.146402</td>\n",
-       "      <td>-0.175051</td>\n",
-       "      <td>4.933987e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CAM016021</td>\n",
-       "      <td>44.048339</td>\n",
-       "      <td>19.616520</td>\n",
-       "      <td>3.145320</td>\n",
-       "      <td>-1.209575</td>\n",
-       "      <td>-5.469540</td>\n",
-       "      <td>0.408125</td>\n",
-       "      <td>6.435731</td>\n",
-       "      <td>2.382090</td>\n",
-       "      <td>-1.641245</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.108804</td>\n",
-       "      <td>3.161913</td>\n",
-       "      <td>-0.543742</td>\n",
-       "      <td>-0.398675</td>\n",
-       "      <td>-1.696984</td>\n",
-       "      <td>-1.200229</td>\n",
-       "      <td>1.731477</td>\n",
-       "      <td>1.198753</td>\n",
-       "      <td>0.627153</td>\n",
-       "      <td>4.640656e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CAM016022</td>\n",
-       "      <td>35.109403</td>\n",
-       "      <td>16.503006</td>\n",
-       "      <td>13.005897</td>\n",
-       "      <td>4.872958</td>\n",
-       "      <td>10.130509</td>\n",
-       "      <td>-4.145126</td>\n",
-       "      <td>8.447940</td>\n",
-       "      <td>0.212080</td>\n",
-       "      <td>6.319037</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-2.013061</td>\n",
-       "      <td>-2.315710</td>\n",
-       "      <td>1.161150</td>\n",
-       "      <td>-0.788727</td>\n",
-       "      <td>-1.743653</td>\n",
-       "      <td>1.281779</td>\n",
-       "      <td>-0.899837</td>\n",
-       "      <td>-0.187736</td>\n",
-       "      <td>0.541461</td>\n",
-       "      <td>-5.311290e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CAM016023</td>\n",
-       "      <td>-30.925468</td>\n",
-       "      <td>-0.562919</td>\n",
-       "      <td>-4.721019</td>\n",
-       "      <td>-12.266425</td>\n",
-       "      <td>-13.294283</td>\n",
-       "      <td>-26.257164</td>\n",
-       "      <td>-6.392913</td>\n",
-       "      <td>-12.228701</td>\n",
-       "      <td>-6.325207</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.216417</td>\n",
-       "      <td>-0.461157</td>\n",
-       "      <td>1.061415</td>\n",
-       "      <td>0.237185</td>\n",
-       "      <td>1.413762</td>\n",
-       "      <td>1.009515</td>\n",
-       "      <td>0.291262</td>\n",
-       "      <td>0.217223</td>\n",
-       "      <td>-0.154285</td>\n",
-       "      <td>-2.779894e-16</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 481 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       camid        PC1        PC2        PC3        PC4        PC5  \\\n",
-       "0  CAM016019 -49.652735  26.011912  -5.648546   1.761695 -18.825114   \n",
-       "1  CAM016020 -16.930555  16.616847   2.692241  12.040084 -19.924856   \n",
-       "2  CAM016021  44.048339  19.616520   3.145320  -1.209575  -5.469540   \n",
-       "3  CAM016022  35.109403  16.503006  13.005897   4.872958  10.130509   \n",
-       "4  CAM016023 -30.925468  -0.562919  -4.721019 -12.266425 -13.294283   \n",
-       "\n",
-       "         PC6       PC7        PC8        PC9  ...     PC471     PC472  \\\n",
-       "0  18.545350 -4.060135   7.981897 -11.630800  ...  0.281694 -2.517557   \n",
-       "1   3.240676 -2.314513 -16.903935  25.908572  ...  0.367014  0.193835   \n",
-       "2   0.408125  6.435731   2.382090  -1.641245  ...  0.108804  3.161913   \n",
-       "3  -4.145126  8.447940   0.212080   6.319037  ... -2.013061 -2.315710   \n",
-       "4 -26.257164 -6.392913 -12.228701  -6.325207  ... -1.216417 -0.461157   \n",
-       "\n",
-       "      PC473     PC474     PC475     PC476     PC477     PC478     PC479  \\\n",
-       "0  0.471343 -0.966010  0.518198 -0.886081 -0.478352  1.019733 -0.042493   \n",
-       "1 -0.340640 -0.459934 -0.030614  0.418748  0.038679  0.146402 -0.175051   \n",
-       "2 -0.543742 -0.398675 -1.696984 -1.200229  1.731477  1.198753  0.627153   \n",
-       "3  1.161150 -0.788727 -1.743653  1.281779 -0.899837 -0.187736  0.541461   \n",
-       "4  1.061415  0.237185  1.413762  1.009515  0.291262  0.217223 -0.154285   \n",
-       "\n",
-       "          PC480  \n",
-       "0 -2.573245e-14  \n",
-       "1  4.933987e-15  \n",
-       "2  4.640656e-15  \n",
-       "3 -5.311290e-15  \n",
-       "4 -2.779894e-16  \n",
-       "\n",
-       "[5 rows x 481 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing: erato: 100%|██████████| 195/195 [00:00<00:00, 75437.12it/s]\n",
+      "Processing: melpomene: 100%|██████████| 38/38 [00:00<00:00, 63172.24it/s]\n",
+      "Processing Genotype data. Total: 9: : 9it [22:32, 150.33s/it]\n"
+     ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "import os\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "from tqdm import tqdm\n",
+    "from pathlib import Path\n",
     "\n",
-    "df = pd.read_csv(\"/local/scratch/carlyn.1/dna/colors/erato_forewings_PCA/PCA_color_1_loadings.csv\")\n",
-    "df = df.rename(columns={\"Unnamed: 0\": \"camid\"})\n",
-    "#df.head()\n",
-    "df.camid = df.camid.apply(lambda x: x.split(\"_\")[0].strip())\n",
-    "df.head()\n",
+    "from gtp.dataloading.data_preprocessors import ButterflyGenePreprocessor\n",
     "\n",
+    "ROOT_GENOTYPE_INPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/vcfs/\")\n",
+    "ROOT_GENOTYPE_OUTPUT_DIR = Path(\"/local/scratch/carlyn.1/dna/vcfs/processed\")\n",
     "\n",
-    "\n"
+    "def convert_bytes(num):\n",
+    "    \"\"\"\n",
+    "    this function will convert bytes to MB.... GB... etc\n",
+    "    \"\"\"\n",
+    "    for x in ['bytes', 'KB', 'MB', 'GB', 'TB']:\n",
+    "        if num < 1024.0:\n",
+    "            return \"%3.1f %s\" % (num, x)\n",
+    "        num /= 1024.0\n",
+    "\n",
+    "def process_fn(pca_csv_path_suffix, save_dir):\n",
+    "    size = convert_bytes(os.path.getsize(ROOT_GENOTYPE_INPUT_DIR / pca_csv_path_suffix))\n",
+    "    print(f\"Processing {pca_csv_path_suffix}: {size} bytes\")\n",
+    "    preprocessor = ButterflyGenePreprocessor(\n",
+    "        input_dir = ROOT_GENOTYPE_INPUT_DIR,\n",
+    "        output_dir = ROOT_GENOTYPE_OUTPUT_DIR\n",
+    "    )\n",
+    "    preprocessor.process(pca_csv_path_suffix=pca_csv_path_suffix)\n",
+    "    preprocessor.save_result(save_dir)\n",
+    "    print(f\"Completed {pca_csv_path_suffix}: {size} bytes\")\n",
+    "    return True\n",
+    "\n",
+    "futures = []\n",
+    "process_data = []\n",
+    "pool = ThreadPoolExecutor(1)\n",
+    "\n",
+    "for species in [\"erato\", \"melpomene\"]:\n",
+    "    species_genome_path = Path(f\"{species}/genome\")\n",
+    "    for root, dirs, files in os.walk(ROOT_GENOTYPE_INPUT_DIR / species_genome_path):\n",
+    "        for i, f in enumerate(tqdm(files, desc=f\"Processing: {species}\")):\n",
+    "            fname = f.split(\".\")[0]\n",
+    "            if os.path.exists(ROOT_GENOTYPE_OUTPUT_DIR / f\"genome/{species}/{fname}/ml_ready.npy\"): \n",
+    "                continue # Delete this after\n",
+    "            future = pool.submit(process_fn, species_genome_path / f, f\"genome/{species}/{fname}\")\n",
+    "            futures.append(future)\n",
+    "            process_data.append([species_genome_path / f, f\"genome/{species}/{fname}\"])\n",
+    "            \n",
+    "progress_bar = tqdm(len(process_data))\n",
+    "progress_bar.set_description(f\"Processing Genotype data. Total: {len(process_data)}\")\n",
+    "\n",
+    "for future in as_completed(futures):\n",
+    "    success = future.result()\n",
+    "    progress_bar.update(1)\n",
+    "    #progress_bar.set_postfix(total=f\"{len(process_data)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
