Added training w/ pvalue filtering

--- a/notebooks/run_pipeline.ipynb
+++ b/notebooks/run_pipeline.ipynb
@@ -34,7 +34,9 @@
     "        \"/local/scratch/david/geno-pheno-data/colors/processed\"\n",
     "    )\n",
     "    ROOT_GENOTYPE_INPUT_DIR = Path(\"/local/scratch/david/geno-pheno-data/dna/\")\n",
-    "    ROOT_GENOTYPE_OUTPUT_DIR = Path(\"/local/scratch/david/geno-pheno-data/dna/processed\")"
+    "    ROOT_GENOTYPE_OUTPUT_DIR = Path(\n",
+    "        \"/local/scratch/david/geno-pheno-data/dna/processed\"\n",
+    "    )"
    ]
   },
   {
@@ -55,8 +57,7 @@
     "from gtp.dataloading.data_preprocessors import ButterflyPatternizePreprocessor\n",
     "\n",
     "preprocessor = ButterflyPatternizePreprocessor(\n",
-    "    input_dir = ROOT_PHENOTYPE_INPUT_DIR,\n",
-    "    output_dir = ROOT_PHENOTYPE_OUTPUT_DIR\n",
+    "    input_dir=ROOT_PHENOTYPE_INPUT_DIR, output_dir=ROOT_PHENOTYPE_OUTPUT_DIR\n",
     ")\n",
     "\n",
     "for species in [\"erato\", \"melpomene\"]:\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: erato: 100%|██████████| 195/195 [00:00<00:00, 64431.17it/s]\n"
+      "Processing: erato: 100%|██████████| 195/195 [00:00<00:00, 40155.60it/s]\n"
      ]
     },
     {
@@ -104,8 +105,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: melpomene: 100%|██████████| 38/38 [00:00<00:00, 58704.81it/s]\n",
-      "Processing Genotype data. Total: 1: : 1it [03:41, 222.00s/it]\n"
+      "Processing: melpomene: 100%|██████████| 38/38 [00:00<00:00, 32349.01it/s]\n",
+      "Processing Genotype data. Total: 0: : 0it [00:00, ?it/s]"
      ]
     }
    ],
@@ -160,8 +161,11 @@
     "    for root, dirs, files in os.walk(ROOT_GENOTYPE_INPUT_DIR / species_genome_path):\n",
     "        for i, f in enumerate(tqdm(files, desc=f\"Processing: {species}\")):\n",
     "            fname = f.split(\".\")[0]\n",
-    "            if os.path.exists(ROOT_GENOTYPE_OUTPUT_DIR / f\"{THIS_DNA_SCOPE}/{species}/{fname}/ml_ready.npy\"):\n",
-    "               continue # Delete this after\n",
+    "            if os.path.exists(\n",
+    "                ROOT_GENOTYPE_OUTPUT_DIR\n",
+    "                / f\"{THIS_DNA_SCOPE}/{species}/{fname}/ml_ready.npy\"\n",
+    "            ):\n",
+    "                continue  # Delete this after\n",
     "            future = pool.submit(\n",
     "                process_fn,\n",
     "                species_genome_path / f,\n",
@@ -197,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
