--- a/notebooks/run_pipeline.ipynb
+++ b/notebooks/run_pipeline.ipynb
@@ -43,16 +43,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/carlyn.1/dna-trait-analysis/src/gtp/dataloading/data_preprocessors.py:65: SyntaxWarning: invalid escape sequence '\\/'\n",
-      "  \"\"\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gtp.dataloading.data_preprocessors import ButterflyPatternizePreprocessor\n",
     "\n",
@@ -72,47 +63,98 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/local/scratch/carlyn.1/dna/vcfs/erato/genome\n"
+      "/local/scratch/david/geno-pheno-data/dna/erato/genome\n",
+      "/local/scratch/david/geno-pheno-data/dna/melpomene/genome\n",
+      "Processing erato/genome/Herato1301.tsv: 11.4 GB bytes\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: erato: 100%|██████████| 195/195 [00:00<00:00, 40155.60it/s]\n"
+      "Processing Genotype data. Total: 18: : 0it [00:00, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/local/scratch/carlyn.1/dna/vcfs/melpomene/genome\n"
+      "read_df exe time: 00:00:56\n",
+      "df_extract_states exe time: 00:02:32\n",
+      "create_ml_ready exe time: 00:08:38\n",
+      "_process exe time: 00:13:54\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: melpomene: 100%|██████████| 38/38 [00:00<00:00, 32349.01it/s]\n",
-      "Processing Genotype data. Total: 0: : 0it [00:00, ?it/s]"
+      "Processing Genotype data. Total: 18: : 1it [18:07, 1087.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_save_result exe time: 00:03:37\n",
+      "Completed erato/genome/Herato1301.tsv: 11.4 GB bytes\n",
+      "Processing melpomene/genome/Hmel204001o.tsv: 2.1 GB bytes\n",
+      "read_df exe time: 00:00:12\n",
+      "df_extract_states exe time: 00:00:29\n",
+      "create_ml_ready exe time: 00:01:43\n",
+      "_process exe time: 00:02:43\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Genotype data. Total: 18: : 2it [22:01, 585.29s/it] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_save_result exe time: 00:01:03\n",
+      "Completed melpomene/genome/Hmel204001o.tsv: 2.1 GB bytes\n",
+      "Processing melpomene/genome/Hmel215003o.tsv: 2.2 GB bytes\n",
+      "read_df exe time: 00:00:10\n",
+      "df_extract_states exe time: 00:00:29\n",
+      "create_ml_ready exe time: 00:01:45\n",
+      "_process exe time: 00:02:44\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Genotype data. Total: 18: : 3it [25:57, 425.99s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_save_result exe time: 00:01:04\n",
+      "Completed melpomene/genome/Hmel215003o.tsv: 2.2 GB bytes\n",
+      "Processing melpomene/genome/Hmel221001o.tsv: 2.2 GB bytes\n",
+      "read_df exe time: 00:00:10\n",
+      "df_extract_states exe time: 00:00:30\n",
+      "create_ml_ready exe time: 00:01:47\n",
+      "_process exe time: 00:02:47\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "from enum import Enum\n",
+    "from multiprocessing import Pool\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "from tqdm import tqdm\n",
     "from pathlib import Path\n",
@@ -159,22 +201,29 @@
     "    species_genome_path = Path(f\"{species}/{THIS_DNA_SCOPE}\")\n",
     "    print(ROOT_GENOTYPE_INPUT_DIR / species_genome_path)\n",
     "    for root, dirs, files in os.walk(ROOT_GENOTYPE_INPUT_DIR / species_genome_path):\n",
-    "        for i, f in enumerate(tqdm(files, desc=f\"Processing: {species}\")):\n",
+    "        for i, f in enumerate(files):\n",
     "            fname = f.split(\".\")[0]\n",
     "            if os.path.exists(\n",
     "                ROOT_GENOTYPE_OUTPUT_DIR\n",
     "                / f\"{THIS_DNA_SCOPE}/{species}/{fname}/ml_ready.npy\"\n",
     "            ):\n",
     "                continue  # Delete this after\n",
-    "            future = pool.submit(\n",
-    "                process_fn,\n",
-    "                species_genome_path / f,\n",
-    "                f\"{THIS_DNA_SCOPE}/{species}/{fname}\",\n",
-    "            )\n",
-    "            futures.append(future)\n",
+    "            \n",
+    "            genome_file_path = species_genome_path / f\n",
+    "            size = os.path.getsize(ROOT_GENOTYPE_INPUT_DIR / genome_file_path)\n",
     "            process_data.append(\n",
-    "                [species_genome_path / f, f\"{THIS_DNA_SCOPE}/{species}/{fname}\"]\n",
+    "                [size, species, genome_file_path, f\"{THIS_DNA_SCOPE}/{species}/{fname}\"]\n",
     "            )\n",
+    "\n",
+    "process_data = sorted(process_data, key=lambda x: (x[1], x[0]))\n",
+    "\n",
+    "for size, species, genome_file_path, save_dir in process_data:\n",
+    "    future = pool.submit(\n",
+    "        process_fn,\n",
+    "        genome_file_path,\n",
+    "        save_dir,\n",
+    "    )\n",
+    "    futures.append(future)\n",
     "\n",
     "progress_bar = tqdm(len(process_data))\n",
     "progress_bar.set_description(f\"Processing Genotype data. Total: {len(process_data)}\")\n",
@@ -187,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dna",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
