--- a/notebooks/dev/loading_configs.ipynb
+++ b/notebooks/dev/loading_configs.ipynb
@@ -2,13 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from gtp.configs.loaders import load_configs\n",
+    "from gtp.dataloading.path_collectors import get_raw_genotype_input_directory, get_raw_phenotype_input_directory\n",
     "\n",
     "configs = load_configs(\"../../configs/default.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/local/scratch/carlyn.1/dna/vcfs')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_raw_genotype_input_directory(configs.io)"
    ]
   },
   {
@@ -19,12 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "{'io': {'default_root': '/local/scratch/carlyn.1/',\n",
-       "  'raw_data_input': {'root': None,\n",
-       "   'genotype': 'dna/vcfs',\n",
-       "   'phenotype': 'dna/colors'},\n",
-       "  'data_post_process': {'root': None, 'genotype': '', 'phenotype': ''}},\n",
-       " 'dev': {'tmp': 'tmp'}}"
+       "PosixPath('/local/scratch/carlyn.1/dna/colors')"
       ]
      },
      "execution_count": 3,
@@ -33,40 +49,42 @@
     }
    ],
    "source": [
-    "import yaml\n",
-    "\n",
-    "with open(\"../../configs/default.yaml\", 'r') as f:\n",
-    "    cfgs = yaml.safe_load(f)\n",
-    "    \n",
-    "cfgs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GenotypeToPhenotypeConfigs(src_yaml={'io': {'default_root': '/local/scratch/carlyn.1/', 'raw_data_input': {'root': None, 'genotype': 'dna/vcfs', 'phenotype': 'dna/colors'}, 'data_post_process': {'root': None, 'genotype': '', 'phenotype': ''}}, 'dev': {'tmp': 'tmp'}}, io=IOConfigs(default_root='/local/scratch/carlyn.1/', raw_data_input=RawDataInputConfigs(root=None, genotype='dna/vcfs', phenotype='dna/colors'), data_post_process=DataPostProcessingConfigs(root=None, genotype='', phenotype='')), dev=DevConfigs(tmp='tmp'))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "configs"
+    "get_raw_phenotype_input_directory(configs.io)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GenotypeToPhenotypeConfigs(src_yaml={'dev': {'tmp': 'tmp'},\n",
+      "                                     'io': {'data_post_process': {'genotype': '',\n",
+      "                                                                  'phenotype': '',\n",
+      "                                                                  'root': None},\n",
+      "                                            'default_root': '/local/scratch/carlyn.1/',\n",
+      "                                            'raw_data_input': {'genotype': 'dna/vcfs',\n",
+      "                                                               'phenotype': 'dna/colors',\n",
+      "                                                               'root': None}}},\n",
+      "                           io=IOConfigs(default_root='/local/scratch/carlyn.1/',\n",
+      "                                        raw_data_input=RawDataInputConfigs(root=None,\n",
+      "                                                                           genotype='dna/vcfs',\n",
+      "                                                                           phenotype='dna/colors'),\n",
+      "                                        data_post_process=DataPostProcessingConfigs(root=None,\n",
+      "                                                                                    genotype='',\n",
+      "                                                                                    phenotype='')),\n",
+      "                           dev=DevConfigs(tmp='tmp'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "pprint.pprint(configs)"
+   ]
   }
  ],
  "metadata": {
