Created editing dashboard for gene modifications

--- a/notebooks/editing_dashboard.ipynb
+++ b/notebooks/editing_dashboard.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,13 @@
     "import functools\n",
     "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from gtp.configs.loaders import load_configs\n",
     "from gtp.configs.project import GenotypeToPhenotypeConfigs\n",
     "from gtp.dataloading.path_collectors import (\n",
     "    get_post_processed_genotype_directory,\n",
+    "    get_post_processed_phenotype_directory,\n",
     "    get_results_plot_output_directory,\n",
     "    get_results_training_metadata_directory,\n",
     ")\n",
@@ -84,12 +86,19 @@
     "\n",
     "    genes = [f\"{scaffold}:{position}\" for scaffold, position in position_metadata]\n",
     "\n",
-    "    return genes[:50]"
+    "    return genes[:50]\n",
+    "\n",
+    "\n",
+    "def get_org_pca(camid):\n",
+    "    phenotype_folder = get_post_processed_phenotype_directory(cfgs.io)\n",
+    "    pca_df = pd.read_csv(phenotype_folder / \"data.csv\")\n",
+    "    results = pca_df.loc[pca_df.camid == camid]\n",
+    "    return results.iloc[0, 1:].to_numpy()  # Remove camid column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +183,8 @@
     "    opts.species = species\n",
     "    opts.wing = wing\n",
     "    opts.color = phenotype\n",
-    "    camids = load_camids()\n",
+    "    # camids = load_camids()\n",
+    "    camids = [\"CAM016020\"]\n",
     "    return camids, camids[0]\n",
     "\n",
     "\n",
@@ -190,8 +200,16 @@
     "    opts.species = species\n",
     "    opts.wing = wing\n",
     "    opts.color = phenotype\n",
-    "    genes = load_genes()\n",
-    "    return genes, genes[0]\n",
+    "    # genes = load_genes()\n",
+    "    # return genes, genes[0]\n",
+    "    return [\"A\", \"B\"], \"A\"\n",
+    "\n",
+    "\n",
+    "@callback(Input(\"specimen-selection\", \"value\"))\n",
+    "def update_specimen_info(camid):\n",
+    "    print(camid)\n",
+    "    org_pca = get_org_pca(camid)\n",
+    "    print(org_pca.shape)\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
