Updated editing dashboard and some refactoring

--- a/notebooks/dev/processing_profiling.ipynb
+++ b/notebooks/dev/processing_profiling.ipynb
@@ -41,34 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "\n",
-    "\n",
-    "class ExecutionTimer:\n",
-    "    def __init__(self, name=\"\"):\n",
-    "        self.name = name\n",
-    "        self.end_time = None\n",
-    "        self.start_time = time.perf_counter()\n",
-    "\n",
-    "    def stop(self):\n",
-    "        self.end_time = time.perf_counter()\n",
-    "\n",
-    "    def restart(self):\n",
-    "        self.end_time = None\n",
-    "        self.start_time = time.perf_counter()\n",
-    "\n",
-    "    def get_elapsed_time(self):\n",
-    "        if self.end_time is None:\n",
-    "            print(\"Timer hasn't been stopped yet. Run the stop() method first.\")\n",
-    "        return self.end_time - self.start_time\n",
-    "\n",
-    "    def print_elapsed_time(self):\n",
-    "        et = self.get_elapsed_time()\n",
-    "        print(f\"{self.name}: {et:.4f}\")"
+    "from gtp.tools.timing import ExecutionTimer"
    ]
   },
   {
