--- a/notebooks/editing_viewer.ipynb
+++ b/notebooks/editing_viewer.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import time\n",
     "from pathlib import Path\n",
     "from io import BytesIO\n",
@@ -32,6 +33,9 @@
     ")\n",
     "from gtp.models.net import SoyBeanNet\n",
     "from gtp.options.process_attribution import ProcessAttributionOptions\n",
+    "\n",
+    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "\n",
     "config_path = Path(\"../configs/default.yaml\")\n",
     "cfgs: GenotypeToPhenotypeConfigs = load_configs(config_path)\n",
@@ -179,6 +183,20 @@
     "    return attr\n",
     "\n",
     "\n",
+    "def get_top_n_peak_windows(init_attr, n=3, window_size=10_000):\n",
+    "    abs_attr = np.copy(np.abs(init_attr))\n",
+    "    D = len(init_attr)\n",
+    "    peak_windows = []\n",
+    "    for ni in range(n):\n",
+    "        sorted_idx = np.argsort(abs_attr)[::-1]\n",
+    "        min_idx = max(0, sorted_idx[0] - window_size)\n",
+    "        max_idx = min(D - 1, sorted_idx[0] + window_size)\n",
+    "        peak_windows.append([min_idx, max_idx])\n",
+    "        abs_attr[min_idx:max_idx] = 0.0\n",
+    "\n",
+    "    return peak_windows\n",
+    "\n",
+    "\n",
     "test_wing = \"forewings\"\n",
     "test_species = \"erato\"\n",
     "test_color = \"color_3\"\n",
@@ -252,7 +270,7 @@
     "init_gene_strs, init_gene_ml = get_genes(\"erato\", 18, init_camids[0])\n",
     "gene_input = torch.tensor(init_gene_ml).unsqueeze(0).unsqueeze(0).float().cuda()\n",
     "init_attr = get_lrp_attr_single(model, gene_input)\n",
-    "attr_order = np.argsort(init_attr)[::-1]\n",
+    "attr_order = np.argsort(np.abs(init_attr))[::-1]\n",
     "\n",
     "start = time.time()\n",
     "output = model(gene_input)[0].detach().cpu().numpy()\n",
@@ -296,7 +314,11 @@
     "\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(9, 3))\n",
-    "ax.scatter(np.arange(len(init_gene_strs)), init_attr)\n",
+    "ax.scatter(np.arange(len(init_attr)), init_attr)\n",
+    "peak_windows = get_top_n_peak_windows(init_attr)\n",
+    "for pw in peak_windows:\n",
+    "    ax.axvline(pw[0], color=\"orange\")\n",
+    "    ax.axvline(pw[1], color=\"orange\")\n",
     "buf = BytesIO()\n",
     "fig.savefig(buf, format=\"png\")\n",
     "\n",
@@ -312,6 +334,7 @@
     "    model_proj_img.layout.visibility = \"hidden\"\n",
     "    species, wing, color, chromosome = get_base_values()\n",
     "    camid = camid_dd.value\n",
+    "\n",
     "    proj_bytes = get_proj_img(\n",
     "        species=species, wing=wing, color=color, camid=camid\n",
     "    ).getvalue()\n",
@@ -338,7 +361,11 @@
     "    diff_edit_model_proj_img.value = zero_img_bytes.getvalue()\n",
     "\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(9, 3))\n",
-    "    ax.scatter(np.arange(len(init_gene_strs)), init_attr)\n",
+    "    ax.scatter(np.arange(len(init_attr)), init_attr)\n",
+    "    peak_windows = get_top_n_peak_windows(init_attr, window_size=window_size_dd.value)\n",
+    "    for pw in peak_windows:\n",
+    "        ax.axvline(pw[0], color=\"orange\")\n",
+    "        ax.axvline(pw[1], color=\"orange\")\n",
     "    buf = BytesIO()\n",
     "    fig.savefig(buf, format=\"png\")\n",
     "\n",
@@ -368,7 +395,7 @@
     "    species, wing, color, chromosome = get_base_values()\n",
     "    genes_str, genes_ml = get_genes(species, chromosome, camid_dd.value)\n",
     "    init_attr = get_lrp_attr_single(model, gene_input)\n",
-    "    attr_order = np.argsort(init_attr)[::-1]\n",
+    "    attr_order = np.argsort(np.abs(init_attr))[::-1]\n",
     "    display_genes = [\n",
     "        f\"{genes_str[idx]} {round(init_attr[idx], 2)}\" for idx in attr_order[:50]\n",
     "    ]\n",
@@ -403,6 +430,17 @@
     "    diff_edit_model_proj_img.layout.visibility = \"hidden\"\n",
     "    species, wing, color, chromosome = get_base_values()\n",
     "    camid = camid_dd.value\n",
+    "\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(9, 3))\n",
+    "    ax.scatter(np.arange(len(init_attr)), init_attr)\n",
+    "    peak_windows = get_top_n_peak_windows(init_attr, window_size=window_size_dd.value)\n",
+    "    for pw in peak_windows:\n",
+    "        ax.axvline(pw[0], color=\"orange\")\n",
+    "        ax.axvline(pw[1], color=\"orange\")\n",
+    "    buf = BytesIO()\n",
+    "    fig.savefig(buf, format=\"png\")\n",
+    "    attribution_plot.value = buf.getvalue()\n",
+    "\n",
     "    model = load_model(species, wing, color, chromosome, camid)\n",
     "    gene_input = (\n",
     "        torch.tensor(get_genes(species, chromosome, camid)[1])\n",
